<!--
  ~ Copyright © 2014-2015 Fowl Corporation
  ~
  ~ This file is part of HomeBank4Android.
  ~
  ~ HomeBank4Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ HomeBank4Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with HomeBank4Android.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/detailedCardLayout_root"
    android:theme="@style/AppTheme">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/detailed_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary_Light"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:transitionName="card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        card_view:cardCornerRadius="4dp" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/GridLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <Space
            android:layout_column="2"
            android:layout_gravity="fill_vertical"
            android:layout_row="2" />

        <TextView
            android:id="@+id/detailedCardDateLabel"
            android:layout_column="1"
            android:layout_gravity="start|center_vertical"
            android:layout_row="1"
            android:transitionName="date"
            android:text="@string/Date" />

        <EditText
            android:id="@+id/detailedCardDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="start|center_vertical"
            android:layout_row="1"
            android:ems="10"
            android:inputType="date" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/detailedCardCategoryLabel"
            android:layout_column="1"
            android:layout_gravity="start|center_vertical"
            android:layout_row="2"
            android:transitionName="category"
            android:text="@string/Category" />

        <AutoCompleteTextView
            android:id="@+id/detailedCardCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="start|center_vertical"
            android:layout_row="2"
            android:text="AutoCompleteTextView" />

        <TextView
            android:id="@+id/detailedCardPayeeLabel"
            android:layout_column="1"
            android:layout_gravity="start|center_vertical"
            android:layout_row="3"
            android:transitionName="payee"
            android:text="@string/Payee" />

        <AutoCompleteTextView
            android:id="@+id/detailedCardPayee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="start|center_vertical"
            android:layout_row="3"
            android:text="AutoCompleteTextView" />

        <TextView
            android:id="@+id/detailedCardAmountLabel"
            android:layout_column="1"
            android:layout_gravity="start|center_vertical"
            android:layout_row="4"
            android:transitionName="amount"
            android:text="@string/Amount" />

        <EditText
            android:id="@+id/detailedCardAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="start|center_vertical"
            android:layout_row="4"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/detailedCardStateLabel"
            android:layout_column="1"
            android:layout_gravity="start|center_vertical"
            android:layout_row="5"
            android:transitionName="category"
            android:text="@string/State"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="5"
            android:id="@+id/detailedCardState_layout">

            <RadioButton
                android:id="@+id/detailedCardState_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/None"
                android:layout_column="1"
                android:layout_row="1" />

            <RadioButton
                android:id="@+id/detailedCardState_reconciled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Reconciled"
                android:layout_column="2"
                android:layout_row="1" />

            <RadioButton
                android:id="@+id/detailedCardState_remind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Remind"
                android:layout_column="1"
                android:layout_row="2" />

            <RadioButton
                android:id="@+id/detailedCardState_cleared"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cleared"
                android:layout_column="2"
                android:layout_row="2" />

        </GridLayout>

        <TextView
            android:id="@+id/detailedCardWordingLabel"
            android:layout_column="1"
            android:layout_gravity="start|center_vertical"
            android:layout_row="6"
            android:transitionName="wording"
            android:text="@string/Wording" />

        <EditText
            android:id="@+id/detailedCardWording"
            android:layout_column="2"
            android:layout_gravity="start|center_vertical"
            android:layout_row="6"
            android:ems="10"
            android:inputType="textAutoCorrect" />

        <TextView
            android:id="@+id/detailedCardInfoLabel"
            android:layout_column="1"
            android:layout_gravity="start|center_vertical"
            android:layout_row="7"
            android:transitionName="label"
            android:text="@string/Label" />

        <EditText
            android:id="@+id/detailedCardInfo"
            android:layout_column="2"
            android:layout_gravity="start|center_vertical"
            android:layout_row="7"
            android:ems="10"
            android:inputType="textAutoCorrect" />

        <ImageView
            android:id="@+id/detailedCardIcon"
            android:layout_column="2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:transitionName="icon"
            android:layout_gravity="center"
            android:contentDescription="@string/desc_CardIcon"/>
    </GridLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</LinearLayout>