<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.fowlcorp.homebank4android.firstLaunchActivity">

    <TextView
        android:id="@+id/first_launch_title"
        android:textSize="30sp"
        android:text="@string/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="start" />

    <Space
        android:layout_width="13dp"
        android:layout_height="13dp" />

    <TextView
        android:id="@+id/first_launch_content"
        android:text="@string/WelcomeContent"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:linksClickable="true"
        android:autoLink="web" />

    <Button
        android:id="@+id/first_launch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        android:textSize="20sp"
        android:layout_gravity="right" />

</LinearLayout>
