<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2015 Fowl Corporation
  ~
  ~ This file is part of HomeBank4Android.
  ~
  ~ HomeBank4Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ HomeBank4Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with HomeBank4Android.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:transitionName="card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        card_view:cardCornerRadius="4dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/cardLayout_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="start"
                    android:orientation="horizontal"
                    android:transitionName="date"
                android:text="@string/Date" />

                <ImageView
                    android:id="@+id/pay_mode_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_weight="0.5" />

                <!--
                <TextView
                    android:id="@+id/cardLayout_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="0.5"
                    android:orientation="horizontal"
                    android:text="@string/Category" />
                -->
            </LinearLayout>
            
            <TextView
                    android:id="@+id/cardLayout_tier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                android:transitionName="payee"
                    android:text="@string/Payee" />

            <LinearLayout
                android:id="@+id/no_split_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/cardLayout_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:transitionName="category"
                    android:text="@string/Category" />

                

                <TextView
                    android:id="@+id/cardLayout_memo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:transitionName="wording"
                    android:text="@string/Wording" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/split_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/cardLayout_solde"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="start"
                    android:orientation="horizontal"
                    android:text="@string/Balance" />

                <TextView
                    android:id="@+id/cardLayout_montant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="0.5"
                    android:orientation="horizontal"
                    android:transitionName="amount"
                    android:text="@string/Amount" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>