<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2014-2015 Fowl Corporation
  ~
  ~ This file is part of HomeBank4Android.
  ~
  ~ HomeBank4Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ HomeBank4Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with HomeBank4Android.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fowlcorp.homebank4android.About$PlaceholderFragment" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/artwork1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="start|center_vertical"
            android:layout_row="1"
            android:text="@string/ArtworkTemplatic"
            android:gravity="start" />

        <Space
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_row="2"
            android:layout_column="1" />

        <TextView
            android:id="@+id/artwork2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="start|center_vertical"
            android:layout_row="3"
            android:text="@string/ArtworkCoelho"
            android:linksClickable="true"
            android:autoLink="web"
            android:gravity="start"/>

        <Space
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_row="4"
            android:layout_column="1" />

        <TextView
            android:id="@+id/artwork3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="start|center_vertical"
            android:layout_row="5"
            android:text="@string/ArtworkMoore"
            android:linksClickable="true"
            android:autoLink="web"
            android:gravity="start"/>

        <Space
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_row="6"
            android:layout_column="1" />

        <TextView
            android:id="@+id/artwork4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="start|center_vertical"
            android:layout_row="7"
            android:text="@string/ArtworkIcons8"
            android:linksClickable="true"
            android:autoLink="web"
            android:gravity="start" />

    </GridLayout>

</ScrollView>