<!--
  ~ Copyright © 2015 Fowl Corporation
  ~
  ~ This file is part of HomeBank4Android.
  ~
  ~ HomeBank4Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ HomeBank4Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with HomeBank4Android.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fowlcorp.homebank4android.About$PlaceholderFragment" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/aboutAuthorsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_row="1"
            android:text="@string/HomeBank4Android"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center_horizontal"
            android:layout_column="1"
            android:layout_columnSpan="2" />

        <Space
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_column="1"
            android:layout_row="2" />

        <TextView
            android:id="@+id/aboutAuthors_Intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="top|left"
            android:layout_row="3"
            android:text="@string/AboutAuthors_Intro"
            android:gravity="fill_horizontal|start"
            android:layout_columnSpan="2" />

        <Space
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_column="1"
            android:layout_row="4" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/homebankLogo"
            android:layout_column="1"
            android:layout_row="5"
            android:layout_rowSpan="2"
            android:contentDescription="@string/HomeBank4Android"
            android:src="@drawable/homebank"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_gravity="top|left"
            android:maxHeight="100dp"
            android:maxWidth="100dp" />

        <TextView
            tools:ignore="HardcodedText"
            android:id="@+id/aboutAuthors_AuthorsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="top|left"
            android:layout_row="5"
            android:text="@string/Authors"
            android:gravity="top|start"
            android:textStyle="bold"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="13dp" />

        <TextView
            android:id="@+id/aboutAuthors_Authors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="top|left"
            android:layout_row="6"
            android:text="Axel BROCHARD\nCédric HUGUENIN\nMartin SCHUTZ"
            tools:ignore="HardcodedText"
            android:gravity="start"
            android:layout_marginLeft="13dp" />
    </GridLayout>
</ScrollView>
